--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,78 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./styles/home.css">
-    <title>Pet Shop</title>
 </head>
+
 <body>
+    <div class="v21_145">
+        <div class="v21_181">
+            <div class="v21_182">
+                <div class="v21_183"></div>
+                <div class="v21_184">
+                    <div class="v21_185"></div><span class="v21_186">Cachorro</span>
+                </div>
+                <div class="v21_187">
+                    <div class="v21_188"></div><span class="v21_189">Gato</span>
+                </div>
+                <div class="v21_190">
+                    <div class="v21_204"></div><span class="v21_192">Pássaro</span>
+                </div>
+            </div>
+            <div class="v21_193">
+                <div class="v21_194">
+                    <div class="v21_195"></div><span class="v21_196">Logo aqui</span>
+                    <div class="v21_197">
+                        <div class="v21_198"></div><span class="v21_199">Entre ou cadastre-se!</span>
+                    </div>
+                    <div class="v21_200">
+                        <div class="v21_201"></div>
+                        <div class="v21_202"></div><span class="v21_203">Pesquisar</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="v21_174">
+            <div class="v21_175"></div><span class="v21_176">Carrossel Imagens</span>
+            <div class="v21_177">
+                <div class="v21_178"></div>
+                <div class="v21_179"></div>
+                <div class="v21_180"></div>
+            </div>
+        </div>
+        <div class="v21_146">
+            <span class="v21_147">Produtos recomendados</span>
+            <div class="v21_148">
+                <div class="v21_149"></div>
+                <div class="v21_150"></div>
+                <span class="v21_151">Ração Golden Fórmula Mini Bits para Cães Adultos Pequeno Porte</span>
+                <span class="v21_152">R$ 30,00</span>
+            </div>
+            <div class="v21_153">
+                <div class="v21_154">
+                    <div class="v21_155"></div>
+                    <span class="v21_156">Petisco Doguitos Cães Adultos e Filhotes Sabor Carne</span>
+                    <span class="v21_157">R$ 15,00</span>
+                </div>
+                <div class="v21_158"></div>
+            </div>
+            <div class="v21_159">
+                <div class="v21_162"></div>
+                <span class="v21_163">Bolinha LCM Cravinho - Cores Sortidas</span>
+                <span class="v21_164">R$ 10,00</span>
+                <div class="v21_165"></div>
+            </div>
+            <div class="v21_166">
+                <div class="v21_170"></div>
+                <span class="v21_171">Ração GranPlus Choice Gatos Adultos Sabor Frango e Carne</span>
+                <span class="v21_172">R$ 150,00</span>
+                <div class="v21_173"></div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
