--- a/src/login.html
+++ b/src/login.html
@@ -8,29 +8,37 @@
 
 <body>
     <div class="v10_86">
-        <div class="v40_2">
-            <div class="v21_5"></div>
-            <span class="v21_6">Pet Shop</span>
+        <div class="v69_8">
+            <div class="v21_5"></div><span class="v21_6">Pet Shop</span>
         </div>
-        <div class="v21_65">
+        <div class="v69_11">
             <div class="v21_52"></div>
             <div class="v22_9">
-                <div class="v21_55"></div>
-                <span class="v21_56">Fazer cadastro</span>
+                <div class="v21_55"></div><span class="v21_56">Fazer cadastro</span>
             </div>
             <div class="v22_7">
-                <div class="v21_60"></div>
-                <span class="v21_61">Log in with Facebook</span>
+                <div class="v21_60"></div><span class="v21_61">Log in with Facebook</span>
             </div>
             <div class="v22_8">
-                <div class="v21_62"></div>
-                <span class="v21_63">Log in with Google</span>
-            </div>
-            <span class="v21_57">Ou</span>
-            <span class="v21_54">Venha fazer parte da nossa comunidade!</span>
-            <span class="v21_53">Ainda não é cliente?</span>
+                <div class="v21_62"></div><span class="v21_63">Log in with Google</span>
+            </div><span class="v21_57">Ou</span><span class="v21_54">Venha fazer parte da nossa comunidade!</span><span
+                class="v21_53">Ainda não é cliente?</span>
         </div>
-        <div class="name"></div>
+        <div class="v69_6">
+            <div class="v21_26"></div><span class="v21_41">Esqueceu sua senha?</span>
+            <div class="v22_4"><span class="v21_38">Lembrar de mim</span>
+                <div class="v21_37"></div>
+            </div>
+            <div class="v22_3">
+                <div class="v21_39"></div><span class="v21_40">Log in</span>
+            </div>
+            <div class="v22_2">
+                <div class="v21_30"></div><span class="v21_29">E-mail</span>
+            </div>
+            <div class="v22_5">
+                <div class="v21_36"></div><span class="v21_35">Senha</span>
+            </div><span class="v21_46">Já é nosso cliente?</span>
+        </div>
     </div>
 </body>
 
