--- a/src/index.html
+++ b/src/index.html
@@ -12,22 +12,30 @@
         <div class="v21_181">
             <div class="v21_182">
                 <div class="v21_183"></div>
-                <div class="v21_184">
-                    <div class="v21_185"></div><span class="v21_186">Cachorro</span>
-                </div>
-                <div class="v21_187">
-                    <div class="v21_188"></div><span class="v21_189">Gato</span>
-                </div>
-                <div class="v21_190">
-                    <div class="v21_204"></div><span class="v21_192">Pássaro</span>
-                </div>
+                <a href="../mockups/mockupSeçãoCachorro.png">
+                    <div class="v21_184">
+                        <div class="v21_185"></div><span class="v21_186">Cachorro</span>
+                    </div>
+                </a>
+                <a href="../mockups/mockupSeçãoGato.png">
+                    <div class="v21_187">
+                        <div class="v21_188"></div><span class="v21_189">Gato</span>
+                    </div>
+                </a>
+                <a href="../mockups/mockupSeçãoPassaro.png">
+                    <div class="v21_190">
+                        <div class="v21_204"></div><span class="v21_192">Pássaro</span>
+                    </div>
+                </a>
             </div>
             <div class="v21_193">
                 <div class="v21_194">
                     <div class="v21_195"></div><span class="v21_196">Logo aqui</span>
-                    <div class="v21_197">
-                        <div class="v21_198"></div><span class="v21_199">Entre ou cadastre-se!</span>
-                    </div>
+                    <a href="./login.html">
+                        <div class="v21_197">
+                            <div class="v21_198"></div><span class="v21_199">Entre ou cadastre-se!</span>
+                        </div>
+                    </a>
                     <div class="v21_200">
                         <div class="v21_201"></div>
                         <div class="v21_202"></div><span class="v21_203">Pesquisar</span>
@@ -45,12 +53,14 @@
         </div>
         <div class="v21_146">
             <span class="v21_147">Produtos recomendados</span>
-            <div class="v21_148">
-                <div class="v21_149"></div>
-                <div class="v21_150"></div>
-                <span class="v21_151">Ração Golden Fórmula Mini Bits para Cães Adultos Pequeno Porte</span>
-                <span class="v21_152">R$ 30,00</span>
-            </div>
+            <a href="./racao-caes.html">
+                <div class="v21_148">
+                    <div class="v21_149"></div>
+                    <div class="v21_150"></div>
+                    <span class="v21_151">Ração Golden Fórmula Mini Bits para Cães Adultos Pequeno Porte</span>
+                    <span class="v21_152">R$ 30,00</span>
+                </div>
+            </a>
             <div class="v21_153">
                 <div class="v21_154">
                     <div class="v21_155"></div>
@@ -65,12 +75,14 @@
                 <span class="v21_164">R$ 10,00</span>
                 <div class="v21_165"></div>
             </div>
-            <div class="v21_166">
-                <div class="v21_170"></div>
-                <span class="v21_171">Ração GranPlus Choice Gatos Adultos Sabor Frango e Carne</span>
-                <span class="v21_172">R$ 150,00</span>
-                <div class="v21_173"></div>
-            </div>
+            <a href="../mockups/mockupProdutoGato.png">
+                <div class="v21_166">
+                    <div class="v21_170"></div>
+                    <span class="v21_171">Ração GranPlus Choice Gatos Adultos Sabor Frango e Carne</span>
+                    <span class="v21_172">R$ 150,00</span>
+                    <div class="v21_173"></div>
+                </div>
+            </a>
         </div>
     </div>
 </body>
