--- a/src/login.html
+++ b/src/login.html
@@ -14,7 +14,8 @@
         <div class="v69_11">
             <div class="v21_52"></div>
             <div class="v22_9">
-                <div class="v21_55"></div><span class="v21_56">Fazer cadastro</span>
+                <div class="v21_55"></div>
+                <span class="v21_56">Fazer cadastro</span>
             </div>
             <div class="v22_7">
                 <div class="v21_60"></div><span class="v21_61">Log in with Facebook</span>
@@ -25,13 +26,17 @@
                 class="v21_53">Ainda não é cliente?</span>
         </div>
         <div class="v69_6">
-            <div class="v21_26"></div><span class="v21_41">Esqueceu sua senha?</span>
+            <a href="../mockups/mockupRecuperaçãoSenha.png">
+                <div class="v21_26"></div><span class="v21_41">Esqueceu sua senha?</span>
+            </a>
             <div class="v22_4"><span class="v21_38">Lembrar de mim</span>
                 <div class="v21_37"></div>
             </div>
-            <div class="v22_3">
-                <div class="v21_39"></div><span class="v21_40">Log in</span>
-            </div>
+            <a href="../mockups/mockupHomeClient.png">
+                <div class="v22_3">
+                    <div class="v21_39"></div><span class="v21_40">Log in</span>
+                </div>
+            </a>
             <div class="v22_2">
                 <div class="v21_30"></div><span class="v21_29">E-mail</span>
             </div>
