--- a/src/index.html
+++ b/src/index.html
@@ -17,12 +17,12 @@
                         <div class="v21_185"></div><span class="v21_186">Cachorro</span>
                     </div>
                 </a>
-                <a href="../mockups/mockupSeçãoGato.png">
+                <a href="../mockups/mockupSecaoGato.png">
                     <div class="v21_187">
                         <div class="v21_188"></div><span class="v21_189">Gato</span>
                     </div>
                 </a>
-                <a href="../mockups/mockupSeçãoPassaro.png">
+                <a href="../mockups/mockupSecaoPassaro.png">
                     <div class="v21_190">
                         <div class="v21_204"></div><span class="v21_192">Pássaro</span>
                     </div>
