--- a/src/login.html
+++ b/src/login.html
@@ -13,10 +13,12 @@
         </div>
         <div class="v69_11">
             <div class="v21_52"></div>
-            <div class="v22_9">
-                <div class="v21_55"></div>
-                <span class="v21_56">Fazer cadastro</span>
-            </div>
+            <a href="../mockups/mockupSignUp.png">
+                <div class="v22_9">
+                    <div class="v21_55"></div>
+                    <span class="v21_56">Fazer cadastro</span>
+                </div>
+            </a>
             <div class="v22_7">
                 <div class="v21_60"></div><span class="v21_61">Log in with Facebook</span>
             </div>
@@ -26,8 +28,9 @@
                 class="v21_53">Ainda não é cliente?</span>
         </div>
         <div class="v69_6">
-            <a href="../mockups/mockupRecuperaçãoSenha.png">
-                <div class="v21_26"></div><span class="v21_41">Esqueceu sua senha?</span>
+            <div class="v21_26"></div>
+            <a href="../mockups/mockupRecuperacaoSenha.png">
+                <span class="v21_41">Esqueceu sua senha?</span>
             </a>
             <div class="v22_4"><span class="v21_38">Lembrar de mim</span>
                 <div class="v21_37"></div>
