Adicionando input busca na home

--- a/src/index.html
+++ b/src/index.html
@@ -37,8 +37,8 @@
                         </div>
                     </a>
                     <div class="v21_200">
-                        <div class="v21_201"></div>
-                        <div class="v21_202"></div><span class="v21_203">Pesquisar</span>
+                        <input class="v21_201" type="text" id="txtBusca" placeholder="Buscar Produto"/>
+                        <div class="v21_202"></div>
                     </div>
                 </div>
             </div>
