--- a/src/login.html
+++ b/src/login.html
@@ -32,8 +32,9 @@
             <a href="../mockups/mockupRecuperacaoSenha.png">
                 <span class="v21_41">Esqueceu sua senha?</span>
             </a>
-            <div class="v22_4"><span class="v21_38">Lembrar de mim</span>
-                <div class="v21_37"></div>
+            <div class="v22_4">
+                <span class="v21_38">Lembrar de mim</span>
+                <input class="v21_37" type="checkbox" checked="checked">
             </div>
             <a href="../mockups/mockupHomeClient.png">
                 <div class="v22_3">
@@ -41,10 +42,10 @@
                 </div>
             </a>
             <div class="v22_2">
-                <div class="v21_30"></div><span class="v21_29">E-mail</span>
+                <input class="v21_30" type="text" placeholder="E-mail"/>
             </div>
             <div class="v22_5">
-                <div class="v21_36"></div><span class="v21_35">Senha</span>
+                <input class="v21_36" type="text" placeholder="Senha"/>
             </div><span class="v21_46">Já é nosso cliente?</span>
         </div>
     </div>
